refactor(node): document RequestStarterGroup/throttles; tighten delay calc; add tests (#259)
* refactor(node): document throttles and RequestStarterGroup; tighten delay calc and naming\n\n- add RequestStarterGroupTest (JUnit 6)\n- apply Spotless formatting

* refactor(node): remove unused DEFAULT_DELAY constant