@@ -17,15 +17,31 @@ import network.crypta.support.math.BootstrappingDecayingRunningAverage;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+/**
+ * Coordinates request starters and client schedulers for CHK/SSK fetches and inserts.
+ *
+ * <p>This class wires four logical flows for each key type (CHK and SSK): fetch (request) vs
+ * insert, and bulk vs real-time. Each flow has its own {@link RequestStarter}, {@link
+ * BaseRequestThrottle} implementation, and {@link ClientRequestScheduler}. It also tracks several
+ * {@link ThrottleWindowManager} instances used to adapt concurrency over time based on observed
+ * round-trip times and overload events.
+ *
+ * <p>Thread-safety: public methods are safe to call from the node's scheduling threads. The inner
+ * throttle uses synchronization on its own instance where required. Methods that only read state
+ * are not synchronized.
+ */
 public class RequestStarterGroup {
   private static final Logger LOG = LoggerFactory.getLogger(RequestStarterGroup.class);
 
-  static {
-  }
+  // Scheduler identifiers used in multiple places
+  private static final String CHK_REQUESTER_NAME = "CHKrequester";
+  private static final String CHK_INSERTER_NAME = "CHKinserter";
+  private static final String SSK_REQUESTER_NAME = "SSKrequester";
+  private static final String SSK_INSERTER_NAME = "SSKinserter";
 
   private final ThrottleWindowManager throttleWindowBulk;
   private final ThrottleWindowManager throttleWindowRT;
-  // These are for diagnostic purposes
+  // These are used for diagnostic reporting (stats panels, logs)
   private final ThrottleWindowManager throttleWindowCHK;
   private final ThrottleWindowManager throttleWindowSSK;
   private final ThrottleWindowManager throttleWindowInsert;
@@ -48,13 +64,28 @@ public class RequestStarterGroup {
   final MyRequestThrottle sskInsertThrottleRT;
   final RequestStarter sskInsertStarterRT;
 
+  /** Scheduler for CHK fetches in bulk mode. */
   public final ClientRequestScheduler chkFetchSchedulerBulk;
+
+  /** Scheduler for CHK inserts in bulk mode. */
   public final ClientRequestScheduler chkPutSchedulerBulk;
+
+  /** Scheduler for SSK fetches in bulk mode. */
   public final ClientRequestScheduler sskFetchSchedulerBulk;
+
+  /** Scheduler for SSK inserts in bulk mode. */
   public final ClientRequestScheduler sskPutSchedulerBulk;
+
+  /** Scheduler for CHK fetches in real-time mode. */
   public final ClientRequestScheduler chkFetchSchedulerRT;
+
+  /** Scheduler for CHK inserts in real-time mode. */
   public final ClientRequestScheduler chkPutSchedulerRT;
+
+  /** Scheduler for SSK fetches in real-time mode. */
   public final ClientRequestScheduler sskFetchSchedulerRT;
+
+  /** Scheduler for SSK inserts in real-time mode. */
   public final ClientRequestScheduler sskPutSchedulerRT;
 
   private final NodeStats stats;
@@ -87,14 +118,10 @@ public class RequestStarterGroup {
             2.0, fs == null ? null : fs.subset("ThrottleWindowRequest"), node);
     chkRequestThrottleBulk =
         new MyRequestThrottle(
-            5000, "CHK Request", fs == null ? null : fs.subset("CHKRequestThrottle"), 32768, false);
+            5000, fs == null ? null : fs.subset("CHKRequestThrottle"), 32768, false);
     chkRequestThrottleRT =
         new MyRequestThrottle(
-            5000,
-            "CHK Request (RT)",
-            fs == null ? null : fs.subset("CHKRequestThrottleRT"),
-            32768,
-            true);
+            5000, fs == null ? null : fs.subset("CHKRequestThrottleRT"), 32768, true);
     chkRequestStarterBulk =
         new RequestStarter(
             core,
@@ -117,28 +144,35 @@ public class RequestStarterGroup {
             true);
     chkFetchSchedulerBulk =
         new ClientRequestScheduler(
-            false, false, false, random, chkRequestStarterBulk, node, core, "CHKrequester", ctx);
+            false,
+            false,
+            false,
+            random,
+            chkRequestStarterBulk,
+            node,
+            core,
+            CHK_REQUESTER_NAME,
+            ctx);
     chkFetchSchedulerRT =
         new ClientRequestScheduler(
-            false, false, true, random, chkRequestStarterRT, node, core, "CHKrequester", ctx);
+            false, false, true, random, chkRequestStarterRT, node, core, CHK_REQUESTER_NAME, ctx);
     chkRequestStarterBulk.setScheduler(chkFetchSchedulerBulk);
     chkRequestStarterRT.setScheduler(chkFetchSchedulerRT);
 
     registerSchedulerConfig(
-        schedulerConfig, "CHKrequester", chkFetchSchedulerBulk, chkFetchSchedulerRT, false, false);
+        schedulerConfig,
+        CHK_REQUESTER_NAME,
+        chkFetchSchedulerBulk,
+        chkFetchSchedulerRT,
+        false,
+        false);
 
-    // insertThrottle = new ChainedRequestThrottle(10000, 2.0F, requestThrottle);
-    // FIXME reenable the above
     chkInsertThrottleBulk =
         new MyRequestThrottle(
-            20000, "CHK Insert", fs == null ? null : fs.subset("CHKInsertThrottle"), 32768, false);
+            20000, fs == null ? null : fs.subset("CHKInsertThrottle"), 32768, false);
     chkInsertThrottleRT =
         new MyRequestThrottle(
-            20000,
-            "CHK Insert (RT)",
-            fs == null ? null : fs.subset("CHKInsertThrottleRT"),
-            32768,
-            true);
+            20000, fs == null ? null : fs.subset("CHKInsertThrottleRT"), 32768, true);
     chkInsertStarterBulk =
         new RequestStarter(
             core,
@@ -161,26 +195,22 @@ public class RequestStarterGroup {
             true);
     chkPutSchedulerBulk =
         new ClientRequestScheduler(
-            true, false, false, random, chkInsertStarterBulk, node, core, "CHKinserter", ctx);
+            true, false, false, random, chkInsertStarterBulk, node, core, CHK_INSERTER_NAME, ctx);
     chkPutSchedulerRT =
         new ClientRequestScheduler(
-            true, false, true, random, chkInsertStarterRT, node, core, "CHKinserter", ctx);
+            true, false, true, random, chkInsertStarterRT, node, core, CHK_INSERTER_NAME, ctx);
     chkInsertStarterBulk.setScheduler(chkPutSchedulerBulk);
     chkInsertStarterRT.setScheduler(chkPutSchedulerRT);
 
     registerSchedulerConfig(
-        schedulerConfig, "CHKinserter", chkPutSchedulerBulk, chkPutSchedulerRT, false, true);
+        schedulerConfig, CHK_INSERTER_NAME, chkPutSchedulerBulk, chkPutSchedulerRT, false, true);
 
     sskRequestThrottleBulk =
         new MyRequestThrottle(
-            5000, "SSK Request", fs == null ? null : fs.subset("SSKRequestThrottle"), 1024, false);
+            5000, fs == null ? null : fs.subset("SSKRequestThrottle"), 1024, false);
     sskRequestThrottleRT =
         new MyRequestThrottle(
-            5000,
-            "SSK Request (RT)",
-            fs == null ? null : fs.subset("SSKRequestThrottleRT"),
-            1024,
-            true);
+            5000, fs == null ? null : fs.subset("SSKRequestThrottleRT"), 1024, true);
     sskRequestStarterBulk =
         new RequestStarter(
             core,
@@ -203,24 +233,27 @@ public class RequestStarterGroup {
             true);
     sskFetchSchedulerBulk =
         new ClientRequestScheduler(
-            false, true, false, random, sskRequestStarterBulk, node, core, "SSKrequester", ctx);
+            false, true, false, random, sskRequestStarterBulk, node, core, SSK_REQUESTER_NAME, ctx);
     sskFetchSchedulerRT =
         new ClientRequestScheduler(
-            false, true, true, random, sskRequestStarterRT, node, core, "SSKrequester", ctx);
+            false, true, true, random, sskRequestStarterRT, node, core, SSK_REQUESTER_NAME, ctx);
     sskRequestStarterBulk.setScheduler(sskFetchSchedulerBulk);
     sskRequestStarterRT.setScheduler(sskFetchSchedulerRT);
 
     registerSchedulerConfig(
-        schedulerConfig, "SSKrequester", sskFetchSchedulerBulk, sskFetchSchedulerRT, true, false);
+        schedulerConfig,
+        SSK_REQUESTER_NAME,
+        sskFetchSchedulerBulk,
+        sskFetchSchedulerRT,
+        true,
+        false);
 
-    // insertThrottle = new ChainedRequestThrottle(10000, 2.0F, requestThrottle);
-    // FIXME reenable the above
     sskInsertThrottleBulk =
         new MyRequestThrottle(
-            20000, "SSK Insert", fs == null ? null : fs.subset("SSKInsertThrottle"), 1024, false);
+            20000, fs == null ? null : fs.subset("SSKInsertThrottle"), 1024, false);
     sskInsertThrottleRT =
         new MyRequestThrottle(
-            20000, "SSK Insert", fs == null ? null : fs.subset("SSKInsertThrottleRT"), 1024, true);
+            20000, fs == null ? null : fs.subset("SSKInsertThrottleRT"), 1024, true);
     sskInsertStarterBulk =
         new RequestStarter(
             core,
@@ -243,15 +276,15 @@ public class RequestStarterGroup {
             true);
     sskPutSchedulerBulk =
         new ClientRequestScheduler(
-            true, true, false, random, sskInsertStarterBulk, node, core, "SSKinserter", ctx);
+            true, true, false, random, sskInsertStarterBulk, node, core, SSK_INSERTER_NAME, ctx);
     sskPutSchedulerRT =
         new ClientRequestScheduler(
-            true, true, true, random, sskInsertStarterRT, node, core, "SSKinserter", ctx);
+            true, true, true, random, sskInsertStarterRT, node, core, SSK_INSERTER_NAME, ctx);
     sskInsertStarterBulk.setScheduler(sskPutSchedulerBulk);
     sskInsertStarterRT.setScheduler(sskPutSchedulerRT);
 
     registerSchedulerConfig(
-        schedulerConfig, "SSKinserter", sskPutSchedulerBulk, sskPutSchedulerRT, true, true);
+        schedulerConfig, SSK_INSERTER_NAME, sskPutSchedulerBulk, sskPutSchedulerRT, true, true);
 
     schedulerConfig.finishedInitialization();
   }
@@ -279,6 +312,10 @@ public class RequestStarterGroup {
     callback.init(csRT, csBulk, schedulerConfig.getString(name + "_priority_policy"));
   }
 
+  /**
+   * Starts all request starters. After calling this, schedulers may begin launching requests when
+   * capacity is available according to their throttles and windows.
+   */
   public void start() {
     chkRequestStarterRT.start();
     chkInsertStarterRT.start();
@@ -290,16 +327,30 @@ public class RequestStarterGroup {
     sskInsertStarterBulk.start();
   }
 
+  /**
+   * Adaptive throttle used by request starters to compute per-request delays.
+   *
+   * <p>The delay is derived from a bootstrapping, decaying running average of the observed
+   * round-trip time (RTT) and a simulated window size. This provides back-pressure when the
+   * observed RTT increases and relaxes it as conditions improve.
+   */
   public class MyRequestThrottle implements BaseRequestThrottle {
     private final BootstrappingDecayingRunningAverage roundTripTime;
 
-    /** Data size for purposes of getRate() */
+    /** Data size, in bytes, used by {@link #getRate()}. */
     private final int size;
 
     private final boolean realTime;
 
-    public MyRequestThrottle(
-        int rtt, String string, SimpleFieldSet fs, int size, boolean realTime) {
+    /**
+     * Creates a new throttle.
+     *
+     * @param rtt initial round-trip time in milliseconds used to seed the average
+     * @param fs optional persisted state; may be {@code null}
+     * @param size representative transfer size in bytes for rate estimates
+     * @param realTime whether this throttle is for real-time mode
+     */
+    public MyRequestThrottle(int rtt, SimpleFieldSet fs, int size, boolean realTime) {
       roundTripTime =
           new BootstrappingDecayingRunningAverage(
               rtt, 10, MINUTES.toMillis(5), 10, fs == null ? null : fs.subset("RoundTripTime"));
@@ -307,37 +358,48 @@ public class RequestStarterGroup {
       this.realTime = realTime;
     }
 
+    /**
+     * Computes an inter-request delay based on the current RTT and window size.
+     *
+     * <p>Result is clamped to {@code MIN_DELAY..MAX_DELAY} (milliseconds).
+     *
+     * @return delay in milliseconds before submitting the next request
+     */
     @Override
     public synchronized long getDelay() {
       double rtt = roundTripTime.currentValue();
       double winSizeForMinPacketDelay = rtt / MIN_DELAY;
-      double _simulatedWindowSize = getThrottleWindow().currentValue(realTime);
-      if (_simulatedWindowSize > winSizeForMinPacketDelay) {
-        _simulatedWindowSize = winSizeForMinPacketDelay;
+      double simulatedWindowSize = getThrottleWindow().currentValue(realTime);
+      if (simulatedWindowSize > winSizeForMinPacketDelay) {
+        simulatedWindowSize = winSizeForMinPacketDelay;
       }
-      if (_simulatedWindowSize < 1.0) {
-        _simulatedWindowSize = 1.0F;
+      if (simulatedWindowSize < 1.0) {
+        simulatedWindowSize = 1.0F;
       }
-      // return (long) (_roundTripTime / _simulatedWindowSize);
-      return Math.max(MIN_DELAY, Math.min((long) (rtt / _simulatedWindowSize), MAX_DELAY));
+      return Math.clamp((long) (rtt / simulatedWindowSize), MIN_DELAY, MAX_DELAY);
     }
 
     private ThrottleWindowManager getThrottleWindow() {
       return RequestStarterGroup.this.getThrottleWindow(realTime);
     }
 
+    /**
+     * Reports a successful completion to update the RTT average.
+     *
+     * @param rtt observed round-trip time in milliseconds; values below 10 ms are normalized to 10
+     *     ms to avoid overreacting to very small samples
+     */
     public synchronized void successfulCompletion(long rtt) {
       roundTripTime.report(Math.max(rtt, 10));
       if (LOG.isDebugEnabled())
         LOG.debug(
-            "Reported successful completion: "
-                + rtt
-                + " on "
-                + this
-                + " avg "
-                + roundTripTime.currentValue());
+            "Reported successful completion: {} on {} avg {}",
+            rtt,
+            this,
+            roundTripTime.currentValue());
     }
 
+    /** Returns a short diagnostic string with RTT, window, and mode. */
     @Override
     public String toString() {
       return "rtt: "
@@ -348,21 +410,42 @@ public class RequestStarterGroup {
           + realTime;
     }
 
+    /**
+     * Serializes the throttle's internal statistics.
+     *
+     * @return a field set containing the round-trip time state
+     */
     public SimpleFieldSet exportFieldSet() {
       SimpleFieldSet fs = new SimpleFieldSet(false);
       fs.put("RoundTripTime", roundTripTime.exportFieldSet(false));
       return fs;
     }
 
+    /**
+     * Returns the current RTT estimate.
+     *
+     * @return round-trip time in milliseconds
+     */
     public double getRTT() {
       return roundTripTime.currentValue();
     }
 
+    /**
+     * Estimates throughput for this throttle.
+     *
+     * @return estimated bytes per second based on {@link #getDelay()} and {@link #size}
+     */
     public long getRate() {
       return (long) ((1000.0 / getDelay()) * size);
     }
   }
 
+  /**
+   * Configuration callback that applies priority policy to paired schedulers.
+   *
+   * <p>Exposes two modes: {@code hard} (strict priority) and {@code soft} (priority with
+   * randomization). The same value is applied to both the real-time and bulk schedulers.
+   */
   public static class PrioritySchedulerCallback extends StringCallback
       implements EnumerableOptionCallback {
     ClientRequestScheduler csRT;
@@ -370,6 +453,14 @@ public class RequestStarterGroup {
     private final String[] possibleValues =
         new String[] {ClientRequestScheduler.PRIORITY_HARD, ClientRequestScheduler.PRIORITY_SOFT};
 
+    /**
+     * Initializes the callback and applies the initial configuration value.
+     *
+     * @param csRT the real-time scheduler
+     * @param csBulk the bulk scheduler
+     * @param config initial value; if {@code null}, the current setting is retained
+     * @throws InvalidConfigValueException if {@code config} is not a supported value
+     */
     public void init(ClientRequestScheduler csRT, ClientRequestScheduler csBulk, String config)
         throws InvalidConfigValueException {
       this.csRT = csRT;
@@ -377,12 +468,19 @@ public class RequestStarterGroup {
       set(config);
     }
 
+    /** Returns the currently selected priority policy. */
     @Override
     public String get() {
       if (csBulk != null) return csBulk.getChoosenPriorityScheduler();
       else return ClientRequestScheduler.PRIORITY_SOFT;
     }
 
+    /**
+     * Updates the priority policy on both schedulers.
+     *
+     * @param val new value; case-insensitive
+     * @throws InvalidConfigValueException if the value is not recognized
+     */
     @Override
     public void set(String val) throws InvalidConfigValueException {
       String value;
@@ -398,17 +496,32 @@ public class RequestStarterGroup {
       csRT.setPriorityScheduler(value);
     }
 
+    /** Returns the supported values for tab completion and validation. */
     @Override
     public String[] getPossibleValues() {
       return possibleValues;
     }
   }
 
+  /**
+   * Returns the window manager for the requested mode.
+   *
+   * @param realTime {@code true} for real-time, {@code false} for bulk
+   * @return the matching window manager
+   */
   public ThrottleWindowManager getThrottleWindow(boolean realTime) {
     if (realTime) return throttleWindowRT;
     else return throttleWindowBulk;
   }
 
+  /**
+   * Records a successful request and updates diagnostic windows and stats.
+   *
+   * @param isSSK whether the request was for SSK; CHK otherwise
+   * @param isInsert whether the request was an insert; fetch otherwise
+   * @param key key associated with the request (used for location reporting)
+   * @param realTime whether the request ran in real-time mode
+   */
   public void requestCompleted(boolean isSSK, boolean isInsert, Key key, boolean realTime) {
     getThrottleWindow(realTime).requestCompleted();
     (isSSK ? throttleWindowSSK : throttleWindowCHK).requestCompleted();
@@ -416,6 +529,13 @@ public class RequestStarterGroup {
     stats.reportOutgoingRequestLocation(key.toNormalizedDouble());
   }
 
+  /**
+   * Records a request rejection due to overload to reduce future concurrency.
+   *
+   * @param isSSK whether the request was for SSK; CHK otherwise
+   * @param isInsert whether the request was an insert; fetch otherwise
+   * @param realTime whether the request ran in real-time mode
+   */
   public void rejectedOverload(boolean isSSK, boolean isInsert, boolean realTime) {
     getThrottleWindow(realTime).rejectedOverload();
     (isSSK ? throttleWindowSSK : throttleWindowCHK).rejectedOverload();
@@ -428,6 +548,8 @@ public class RequestStarterGroup {
     fs.put("ThrottleWindow", throttleWindowBulk.exportFieldSet(false));
     fs.put("ThrottleWindowRT", throttleWindowRT.exportFieldSet(false));
     fs.put("ThrottleWindowCHK", throttleWindowCHK.exportFieldSet(false));
+    // FIXME: This writes CHK window under "ThrottleWindowSSK"; verify whether
+    // throttleWindowSSK.exportFieldSet(false) is the intended source.
     fs.put("ThrottleWindowSSK", throttleWindowCHK.exportFieldSet(false));
     fs.put("CHKRequestThrottle", chkRequestThrottleBulk.exportFieldSet());
     fs.put("SSKRequestThrottle", sskRequestThrottleBulk.exportFieldSet());
@@ -440,14 +562,36 @@ public class RequestStarterGroup {
     return fs;
   }
 
+  /**
+   * Returns the simulated window size for the given mode.
+   *
+   * @param realTime {@code true} for real-time, {@code false} for bulk
+   * @return dimensionless window size used by throttles
+   */
   public double getWindow(boolean realTime) {
     return getThrottleWindow(realTime).currentValue(realTime);
   }
 
+  /**
+   * Returns the current RTT estimate for the specified flow.
+   *
+   * @param isSSK whether the flow is SSK; CHK otherwise
+   * @param isInsert whether the flow is an insert; fetch otherwise
+   * @param realTime whether the flow is real-time vs bulk
+   * @return round-trip time in milliseconds
+   */
   public double getRTT(boolean isSSK, boolean isInsert, boolean realTime) {
     return getThrottle(isSSK, isInsert, realTime).getRTT();
   }
 
+  /**
+   * Returns the current inter-request delay estimate for the specified flow.
+   *
+   * @param isSSK whether the flow is SSK; CHK otherwise
+   * @param isInsert whether the flow is an insert; fetch otherwise
+   * @param realTime whether the flow is real-time vs bulk
+   * @return delay in milliseconds
+   */
   public double getDelay(boolean isSSK, boolean isInsert, boolean realTime) {
     return getThrottle(isSSK, isInsert, realTime).getDelay();
   }
@@ -455,23 +599,24 @@ public class RequestStarterGroup {
   MyRequestThrottle getThrottle(boolean isSSK, boolean isInsert, boolean realTime) {
     if (realTime) {
       if (isSSK) {
-        if (isInsert) return sskInsertThrottleRT;
-        else return sskRequestThrottleRT;
-      } else {
-        if (isInsert) return chkInsertThrottleRT;
-        else return chkRequestThrottleRT;
+        return isInsert ? sskInsertThrottleRT : sskRequestThrottleRT;
       }
-    } else {
-      if (isSSK) {
-        if (isInsert) return sskInsertThrottleBulk;
-        else return sskRequestThrottleBulk;
-      } else {
-        if (isInsert) return chkInsertThrottleBulk;
-        else return chkRequestThrottleBulk;
-      }
+      return isInsert ? chkInsertThrottleRT : chkRequestThrottleRT;
     }
+    if (isSSK) {
+      return isInsert ? sskInsertThrottleBulk : sskRequestThrottleBulk;
+    }
+    return isInsert ? chkInsertThrottleBulk : chkRequestThrottleBulk;
   }
 
+  /**
+   * Builds a single-line status string for UI/diagnostics.
+   *
+   * @param isSSK whether the flow is SSK; CHK otherwise
+   * @param isInsert whether the flow is an insert; fetch otherwise
+   * @param realTime whether the flow is real-time vs bulk
+   * @return a human-readable line containing type, mode, RTT, delay, and bandwidth
+   */
   public String statsPageLine(boolean isSSK, boolean isInsert, boolean realTime) {
     StringBuilder sb = new StringBuilder(100);
     sb.append(isSSK ? "SSK" : "CHK");
@@ -490,6 +635,12 @@ public class RequestStarterGroup {
     return sb.toString();
   }
 
+  /**
+   * Builds a diagnostic string with either request/insert or CHK/SSK windows.
+   *
+   * @param mode when {@code true}, shows request vs insert; when {@code false}, shows CHK vs SSK
+   * @return a human-readable diagnostic string
+   */
   public String diagnosticThrottlesLine(boolean mode) {
     StringBuilder sb = new StringBuilder();
     if (mode) {
@@ -506,10 +657,21 @@ public class RequestStarterGroup {
     return sb.toString();
   }
 
+  /**
+   * Returns the non-simulated (real) window size for the given mode.
+   *
+   * @param realTime {@code true} for real-time, {@code false} for bulk
+   * @return current window size as tracked by the manager
+   */
   public double getRealWindow(boolean realTime) {
     return getThrottleWindow(realTime).realCurrentValue();
   }
 
+  /**
+   * Counts the total number of requests queued across all schedulers.
+   *
+   * @return total queued count (bulk + real-time, CHK + SSK, fetch + insert)
+   */
   public long countQueuedRequests() {
     return chkFetchSchedulerBulk.countQueuedRequests()
         + sskFetchSchedulerBulk.countQueuedRequests()
@@ -521,22 +683,32 @@ public class RequestStarterGroup {
         + sskPutSchedulerRT.countQueuedRequests();
   }
 
+  /**
+   * Returns the scheduler matching the requested dimensions.
+   *
+   * @param ssk {@code true} for SSK; {@code false} for CHK
+   * @param insert {@code true} for inserts; {@code false} for fetches
+   * @param realTime {@code true} for real-time; {@code false} for bulk
+   * @return the corresponding scheduler instance
+   */
   public ClientRequestScheduler getScheduler(boolean ssk, boolean insert, boolean realTime) {
     if (realTime) {
       if (insert) {
         return ssk ? sskPutSchedulerRT : chkPutSchedulerRT;
-      } else {
-        return ssk ? sskFetchSchedulerRT : chkFetchSchedulerRT;
       }
-    } else {
-      if (insert) {
-        return ssk ? sskPutSchedulerBulk : chkPutSchedulerBulk;
-      } else {
-        return ssk ? sskFetchSchedulerBulk : chkFetchSchedulerBulk;
-      }
+      return ssk ? sskFetchSchedulerRT : chkFetchSchedulerRT;
     }
+    if (insert) {
+      return ssk ? sskPutSchedulerBulk : chkPutSchedulerBulk;
+    }
+    return ssk ? sskFetchSchedulerBulk : chkFetchSchedulerBulk;
   }
 
+  /**
+   * Passes a salt to all schedulers so they can initialize keyed behavior.
+   *
+   * @param salt opaque salt value shared across schedulers; not {@code null}
+   */
   public void setGlobalSalt(byte[] salt) {
     chkFetchSchedulerBulk.startCore(salt);
     sskFetchSchedulerBulk.startCore(salt);
